--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
